# yet-another-retnet

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  templatize
.github/disabled-workflows/: publish.yaml
scripts/: benchmark_inference.py  train_project_gutenberg.py
tests/: test_nothing.py  test_retention.py  test_retnet.py
yet_another_retnet/: __init__.py  retention.py  retnet.py
yet_another_retnet/utils/: benchmark.py  gutenberg.py  profile.py
