[build-system]
requires = ["setuptools", "setuptools-scm"]

[project]
name = "{{REPO_NAME}}"
authors = [
    {name = "{{GIT_USER_NAME}}", email = "{{GIT_USER_EMAIL}}"},
]
description = "{{REPO_NAME}}"
license = {text = "MIT"}
dynamic = ["version", "readme"]  # NOTE: Must be in sync with [tool.setuptools.dynamic] below
dependencies = []
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools.dynamic]
# NOTE: Must be in sync with 'project.dynamic' above
version = {attr = "{{REPO_NAME_SNAKECASE}}.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["tests"]

# extra packages (e.g. pip install .[test])
[project.optional-dependencies]
test = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]


# ----- Linting, Formatting, and Typing -----

[tool.black]
line-length = 88

[tool.mypy]
files = "{{REPO_NAME_SNAKECASE}}/"
check_untyped_defs = "true"
ignore_missing_imports = "true"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term-missing --cov-fail-under 80"
filterwarnings = "ignore:.*.:DeprecationWarning"

[tool.ruff]
ignore = ["B905", "E501"]
line-length = 88
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W"
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.mccabe]
max-complexity = 18